--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -3,7 +3,7 @@ if(NOT MINGW)
 add_subdirectory(w32-pthreads)
 endif()
 
-add_subdirectory(glad)
+#add_subdirectory(glad)
 add_subdirectory(ipc-util)
 
 if(BUILD_LIBFF)
