--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -30,7 +30,7 @@ elseif(APPLE)
 	add_subdirectory(mac-capture)
 	add_subdirectory(mac-vth264)
 	add_subdirectory(mac-syphon)
-	add_subdirectory(decklink/mac)
+#	add_subdirectory(decklink/mac)
 	add_subdirectory(vlc-video)
 	add_subdirectory(linux-jack)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
@@ -52,14 +52,14 @@ if(WIN32 OR APPLE)
 	option(BUILD_BROWSER "Build browser plugin" OFF)
 	if (BUILD_BROWSER)
 		if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/obs-browser/CMakeLists.txt")
-			add_subdirectory(obs-browser)
+#			add_subdirectory(obs-browser)
 		else()
 			message(STATUS "obs-browser submodule not found!  Please fetch submodules.  obs-browser plugin disabled.")
 		endif()
 	endif()
 
 	if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/obs-vst/CMakeLists.txt")
-		add_subdirectory(obs-vst)
+#		add_subdirectory(obs-vst)
 	else()
 		message(STATUS "obs-vst submodule not found!  Please fetch/update submodules.  obs-vst plugin disabled.")
 	endif()
