--- a/plugins/image-source/CMakeLists.txt
+++ b/plugins/image-source/CMakeLists.txt
@@ -10,10 +10,10 @@ set(image-source_SOURCES
 	color-source.c
 	obs-slideshow.c)
 
-add_library(image-source MODULE
+add_library(image-source STATIC
 	${image-source_SOURCES})
 target_link_libraries(image-source
 	libobs
 	${image-source_PLATFORM_DEPS})
 
-install_obs_plugin_with_data(image-source data)
+#install_obs_plugin_with_data(image-source data)
